# clipforge

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: design.md  tasks.md
examples/layouts/: center_gameplay.json  facecam_focus.json  fullscreen_downscaled_blur_bg.json  hybrid.json  hybrid_full_game_bottom.json
src/clipforge/: clipr.py  config.py  download.py  json_validation.py  layouts.py  render.py  render_clip.py  state.py  twitch.py  utils.py
src/clipforge/core/: config.py  utils.py
src/clipforge/integrations/: clipr.py  openai.py  retry.py  twitch.py
src/clipforge/media/: __init__.py  analyze.py  caption_escaping.py  caption_rendering.py  captions.py  download.py  layouts.py  overlay.py  render.py  render_settings.py  subject.py
src/clipforge/pipeline/: __init__.py  artifact_reuse.py  artifacts.py  cli.py  (+13 more)
tests/: constants.py  test_clipr.py  test_config.py  test_download.py  test_layouts.py  test_render.py  test_render_clip.py  test_utils.py
tests/core/: test_config.py  test_utils.py
tests/integrations/: test_clipr.py  test_openai.py  test_retry.py  test_twitch.py
tests/media/: test_analyze.py  test_caption_escaping.py  test_captions.py  test_download.py  test_layouts.py  test_overlay.py  test_render.py
tests/pipeline/: test_artifacts.py  test_cleanup.py  test_cli.py  test_discovery.py  test_metadata.py  test_prepare.py  test_processing.py  test_ranking.py  test_review.py  test_state_sync.py  test_workflows.py
tests/server/: test_review_server.py
tests/storage/: test_artifact_paths.py  test_state.py
tests/utils/: test_paths.py
(+9 files in other folders)
