[project]
name = "clipforge"
version = "0.1.0"
description = "Automated clip generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "requests",
    "python-dotenv",
    "yt-dlp"
]

[project.scripts]
clipforge = "clipforge.pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest"
]

yolo = [
    "ultralytics"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]